# note

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ads.txt  build.sh  dodo.py  export_sessions.py  netlify.toml  openhtml.bat  pyproject.toml  requirements.txt  run_simple_http_server.bat  run_simple_http_server.sh  setup.py  simple_http_server.py  translate-po-ja-en.py  vscode.bat
.github/workflows/: netlify-scheduled-deploy.yml
docs/: about.rst  about_this_site.rst  ads.txt  conf.py  index.rst
docs/SA/: IPA試験の別名一覧.rst  index.rst  システムアーキテクト.rst  システムアーキテクト試験.rst  用語収集.rst
docs/SA/keywords/: FTE.rst  GoF.rst  index.rst  コンポーネントとモジュール.rst  デザインパターン.rst  パターン.rst  人月.rst  大きな泥団子.rst
docs/_templates/: ads_google.html  ads_half_page.html  ads_parts.html  ads_themoneytizer.html  ads_top_medium_rectangle.html  edit-this-page.html  language_swicher.html  last-updated.html  layout.html
docs/agents/: ai-log-blog-writer.md  log-extraction-checklist.md  po-validation-guide.md  translation-workflow.md
docs/blog/: 2025-03-22-001.rst  2025-03-23-001.rst  index.rst  tech_trends.rst
docs/blog/posts/: 2025-03-22-001.rst  2025-03-23-001.rst  2025-03-23-002.rst  2025-03-27-001-ablog-install.rst  2025-03-27-002-ablog-blog-html-conflict.rst  2025-04-30-oracle-always-free.rst  2025-05-01-initial-setup-linux.rst  2025-05-02-linux-dotfiles-management.rst  2025-05-03-initail-setup-zsh.rst  2025-05-04-dotfiles-3commands.rst  2025-05-05-scheduled-ablog-build.rst  2025-05-06-nvim-initail-setup.rst  2025-05-07-vi-emacs-survival.rst  2025-05-08-neovim-vimplug-copilot.rst  2025-05-09-windows-terminal.rst  2025-05-10-tmux-setup.rst  2025-05-11-minimal-zsh-plugins.rst  2025-05-12-ssh-tunnel-Http-Preview.rst  2025-05-13-terminal-shortcuts.rst  2025-05-14-ipad-ssh-setup.rst  2025-05-15-ipad-keyboard-tips.rst  2025-05-16-pre-commit-introduction.rst  2025-05-17-pre-commit-template.rst  2025-05-18-pre-commit-autoupdate-ci.rst  2025-05-19-mockoon-https-stub-windows.rst  2025-05-20-tmux-copy-mode-cheatsheet.rst  2025-05-21-supabase-postgresql-free.rst  2025-05-22-mkdocs-github-pages-poetry.rst  2025-05-23-mkdocs-mkdocstrings-githubio.rst  2025-05-24-intro-to-doit.rst  2025-05-25-gh-pages-docsite-strategy.rst  2025-05-26-sphinx-build-measure-time.rst  2025-05-27-sphinx-build-performance-optimization.rst  2025-05-28-python-poe-to-doit-migration.rst  2025-05-29-comment-nvim-vimplug.rst  2025-05-30-poetry-vs-rye.rst  2025-05-31-migrate-poetry-to-rye-netlify.rst  2025-06-01-dotfiles-rye-setup.rst  2025-06-02-blockdiag-migration-failure.rst  2025-06-03-markdown-trial-and-rst-decision.rst  (+12 more)
docs/ex/: buzz_index.rst  data-factory.rst  etl.rst
docs/ex/angular/: basic.rst  index.rst  tutorial.rst
docs/ex/docker/: index.rst
docs/ex/es/: index.rst
docs/ex/git/: index.rst
docs/git/: index.rst
docs/gpt/: autogpt-installation-and-setup.rst  index.rst
docs/posts/: 2025-03-22-001.rst  2025-03-22_サイト更新再開にあたり.rst  2025-03-23-001.rst  2025-03-23-002.rst  2025-03-23_python環境の再構築.rst  index.rst
docs/programming/: index.rst
docs/python/: basic-memo.rst  index.rst  ipynb.rst  poetry.rst
docs/reStructuredText/: about.rst  basics.rst  directive.rst  index.rst  snipets.rst
docs/skills_certifications/: index.rst  system_architect_exam.rst
docs/sphinx/: analytics.rst  code-block.rst  index.rst  markdown.md  sphinx-sitemap.rst  todo.rst
docs/tools/: index.rst
docs/vscode/: about-vscode.rst  index.rst  onEnterKey.rst
src/note/: __init__.py
static/: _redirects  ads.txt  cmp.js  index.html  python_フレーム説明.txt  robots.txt  style.css
(+263 files in other folders)
