[tool.poetry]
name = "ITNote"
version = "0.1.0"
description = ""
authors = ["mtakagishi <mtakagishi+github@gimail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
sphinx = "^7.0"
pydata-sphinx-theme = "^0.16.0"
myst-parser = "^4.0.0"
sphinxcontrib-blockdiag = "^3.0.0"
sphinx-sitemap = "^2.5.0"
sphinxnotes-strike = "^1.2"
sphinx-intl = "^2.1.0"
sphinx-last-updated-by-git = "^0.3.4"
sphinx-git = "^11.0.0"
poethepoet = "^0.19.0"
Pillow = "^10.0"
ablog = "^0.11.12"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2021.3.14"
autopep8 = "^2.0.2"
translate-po = { git = "https://github.com/mtakagishi/translate-po.git" }
doc8 = "^1.1.2"
esbonio = "^0.16.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
doc = "python setup.py doc"
gettext = "python setup.py gettext"
