[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.doc8]
max-line-length = 120
ignore = ["D001", "D004"]

[tool.poetry]
name = "ITNote"
version = "0.1.0"
description = ""
authors = ["mtakagishi <mtakagishi+github@gimail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.0"
pydata-sphinx-theme = "^0.16.0"
myst-parser = "^4.0.0"
sphinxcontrib-blockdiag = "^3.0.0"
sphinx-sitemap = "^2.5.0"
sphinxnotes-strike = "^1.2"
sphinx-intl = "^2.1.0"
sphinx-last-updated-by-git = "^0.3.4"
sphinx-git = "^11.0.0"
Pillow = "^10.0"
ablog = "^0.11.12"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2021.3.14"
autopep8 = "^2.0.2"
translate-po = {git = "https://github.com/mtakagishi/translate-po.git"}
doc8 = "^1.1.2"
esbonio = "^0.16.5"
rstcheck = "^6.2.4"
pre-commit = "^4.2.0"
doit = "^0.36.0"

[tool.rstcheck]
ignore_roles = ["doc"]
ignore_directives = ["toctree", "post", "postlist", "note", "warning", "admonition", "sidebar", "tip", "hint", "important", "caution", "danger", "error", "attention", "seealso", "code-block"]
